--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,36 +8,44 @@
   <title>Now Optics</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+<!-- JavaScript -->
+<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+
+<!-- CSS -->
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="/main.css" />
+
 </head>
 
 <body>
   <div class="container h-100">
     <div class="row h-100">
-      <div class="col-md-4 my-auto">
+      <div class="col-md-5 my-auto">
+        <h1 class="h3 mb-5">Notes Application</h1>
         <form id="noteForm" class="card card-body rounded-0">
-          <h1 class="h3 mb-5">Add Notes</h1>
+          <h2 class="h3 mb-5">Notes</h2>
           <input id="title" type="text" name="message" placeholder="Title" class="form-control rounded-0 mb-3"
             autofocus />
 
           <textarea name="description" id="description" rows="2" placeholder="Description"
             class="form-control rounded-0 mb-3"></textarea>
+
+            <input id="date" type="date" name="message" placeholder="Date"  class="form-control rounded-0 mb-3"/>
+
           <button class="btn btn-success rounded-0">Save</button>
+
         </form>
       </div>
-      <div class="col-md-8 py-3" id="notes"></div>
+      <div class="col-md-7 py-3" id="notes"></div>
     </div>
-  </div>
 
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
 
   <script src="/socket.io/socket.io.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="main.js" type="module"></script>
 </body>
 
