--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <link rel="stylesheet" href="/main.css" />
+  <link rel="stylesheet" href="css/main.css" />
 
 </head>
 
@@ -46,7 +46,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  <script src="main.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
