--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,36 +16,35 @@
 <!-- CSS -->
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="css/main.css" />
-
 </head>
 
 <body>
   <div class="container h-100">
     <div class="row h-100">
-      <div class="col-md-5 my-auto">
+      <div class="col-md-6 my-auto">
         <h1 class="h3 mb-5">Notes Application</h1>
         <form id="noteForm" class="card card-body rounded-0">
           <h2 class="h3 mb-5">Notes</h2>
-          <input id="title" type="text" name="message" placeholder="Title" class="form-control rounded-0 mb-3"
+          <input id="title" type="text" name="title" placeholder="Title" class="form-control rounded-0 mb-3"
             autofocus />
 
           <textarea name="description" id="description" rows="2" placeholder="Description"
             class="form-control rounded-0 mb-3"></textarea>
 
-            <input id="date" type="date" name="message" placeholder="Date"  class="form-control rounded-0 mb-3"/>
+            <input id="date" type="date" name="date" placeholder="Date"  class="form-control rounded-0 mb-3"/>
 
-          <button class="btn btn-success rounded-0">Save</button>
+          <button class="btn btn-info rounded-0">Save</button>
 
         </form>
       </div>
-      <div class="col-md-7 py-3" id="notes"></div>
+      <div class="col-md-4 py-3" id="notes"></div>
     </div>
 
-
   <script src="/socket.io/socket.io.js"></script>
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
 
