--- a/src/public/index.html
+++ b/src/public/index.html
@@ -24,6 +24,16 @@
 
 <body>
   <div class="container">
+
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Notes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/chats">Chats</a>
+      </li>
+    </ul>
+
     <div class="row h-100">
       <div class="col-md-6 my-auto">
         <h1 class="mb-5">Notes Application</h1>
